# trueid-discovery-copilot

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  NOTEBOOK_GUIDE.md  PLAN.md  README.md  README.th.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: app.yaml
data/: README.md  catalog.jsonl  faq.jsonl  golden.jsonl  matches.jsonl  packages.json  privileges.jsonl  users.jsonl
data/index/: embeddings.npz
docs/: README.md
notebooks/: README.md  exam.ipynb
prompts/: README.md  answer_compose.v1.md  intent_classifier.v1.md
scripts/: demo.py  generate_data.py  ingest.py
src/app/: __init__.py  main.py
src/app/agent/: guardrails.py  intent.py  orchestrator.py
src/app/api/: middleware.py  routes.py  schemas.py
src/app/core/: config.py  cost.py  logging.py
src/app/eval/: golden.py  metrics.py  run_eval.py
src/app/llm/: gateway.py  openai_client.py  prompts.py
src/app/retrieval/: bm25.py  dense.py  embeddings.py  hybrid.py  ingest.py
src/app/tools/: entitlement.py  privilege.py  schedule.py
tests/: conftest.py  test_chat_smoke.py  test_eval_metrics.py  test_pii.py  test_retrieval.py  test_tools.py
